tests/negative/builtin_arity.spk
; Calling a builtin with the wrong number of arguments.
(str-len "a" "b")
